scrollbar issue solved

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,23 +3,23 @@ body{
   font-family: "mulish",'sans-serif','arial';
   overflow-x:hidden;
 }
-::-webkit-scrollbar{
-  width:10px;
-  z-index:1;
-  background: transparent;
-}
-::-webkit-scrollbar-thumb{
-  background-color: transparent;
-  background-clip: content-box;
-  border-radius: 20px;
-  border: 2px solid transparent;
-}
-::-webkit-scrollbar-track{
-  width: 4px;
-  background:transparent;
-}
 .quill > .ql-container > .ql-editor.ql-blank::before{
   font-size: 12px;
   padding-left:10px;
   color: gray;
+}
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: #6f58c9;
+  border-radius: 10px;
+  border: 3px solid #f1f1f1;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #5a47a9;
 }
